--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,66 @@
-@font-face {
-  font-family: 'Museo';
-  src: local('Museo500'), url(./fonts/Museo500.otf) format('otf');
-  src: local('Museo700'), url(./fonts/Museo700.otf) format('otf');
+.listings {
+  display: grid;
+  padding: 1rem;
+  grid-template-columns: repeat( auto-fill, minmax(500px, 1fr));
+  grid-gap: 1rem;
+  justify-items: center;
 }
 
-.listings-media-grid {
+.listing-media-container:hover {
+  box-shadow: 0 0 10px rgba(0,0,0,0.6);
+  border-radius: 15px;
+}
+
+.listing-media-grid {
   display: grid;
   height: 500px;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  border-radius: 25px;
+  border-radius: 15px;
+  overflow: hidden;
   grid-template-areas:
-    "photo    photo photo photo   photo photo "
-    "photo photo photo photo   photo photo "
-    "photo photo photo photo photo photo ";
+    "photo photo photo photo photo photo"
+    "photo photo photo photo photo photo"
+    "photo photo photo photo photo photo";
 }
 
-.listing-grid {
-  display: grid;
-  padding: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(500px,1fr));
-  grid-gap: 1rem;
+.listing-info {
+  display: block;
+  text-align:left; 
+  margin:15px; 
+  font-size: 1.1em;
 }
 
-.roommates-grid {
+@keyframes slideInFromRight {
+  0% {
+    opacity: 1;
+    transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    visibility: hidden;
+  }
+}
+
+@keyframes slideOutToRight {
+  0% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(100%);
+  }
+}
+
+.roommates {
+  z-index: 2;
   height: 100%;
   width: 100%;
-  border-radius: 25px;
+  padding: 1rem;
+  border-radius: 15px;
   list-style: none;
   background: #1a1a1a;
   display: -webkit-box;
@@ -35,12 +69,24 @@
   display: -webkit-flex;
   display: flex;
   -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .roommates-images {
-  border-radius: 25px;
+  z-index: 3;
+  width: 100%;
+  border-radius: 15px;
   grid-area: photo;
+  animation:  0.2s ease 0s 1 slideInFromRight;
+}
+
+.roommates-images-exit {
+  z-index: 3;
+  width: 100%;
+  border-radius: 15px;
+  grid-area: photo;
+  animation:  0.2s ease 0s 1 slideOutToRight;
+  visibility: hidden;
 }
 
 .roommates-images:hover {
@@ -48,50 +94,48 @@
 }
 
 .listings-media-img {
-  border-radius: 25px;
+  border-radius: 15px;
   grid-area: photo;
-}
-.listings-media-img > img:hover {
-  box-shadow: 5px 5px 5px;
-  color:#aaaaaa;
+  z-index: 1;
 }
 
 .listings-media-img > img {
   background-position: center;
   object-fit: cover;
-  border-radius: 25px;
-  width: 100%;
+  border-radius: 15px;
   max-height: 100%;
   min-height: 100%;
-  min-width: 100%;
+  width: 100%;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 }
 
 .back-button-container {
   position: relative;
-grid-row-start:    3;
-grid-row-end:      4;
-grid-column-start: 1;
-grid-column-end:   2;
   z-index: 2;
 }
 
 .back-button {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    border: none;
-    background: none;
-    color: white;
-    background-color: #df2020;
-    height: 60px;
-    width: 90px;
-    border-top-right-radius: 15px;
-      font-size: xx-large;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  border: none;
+  background: none;
+  color: white;
+  background-color: #e91341;
+  height: 60px;
+  width: 90px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  font-size: xx-large;
 }
 
 .back-button:hover {
-  background-color: #d63f3f;
+  background-color: #971c36;
+}
+
+.roommate-avatar {
+  text-align: center;
+  margin: 20px;
 }
 
 .roommate-name {
@@ -102,22 +146,17 @@ grid-column-end:   2;
 }
 
 .roommate-name:hover {
-  color: #df2020;
+  color: #e73434;
 }
 
-.roommate-avatar:hover {
-  color: pink;
-  background-color: pink;
-}
-
-.roommates-preview {
-  margin-top: 30px;
-  margin-right: 30px;
-  border-radius: 25px;
-grid-row-start:    3;
-grid-row-end:      4;
-grid-column-start: 3;
-grid-column-end:   7;
-
-  z-index: 2;
+.roommates-preview-container {
+  align-self: flex-end;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  border-radius: 15px;
+  grid-row-start:    3;
+  grid-row-end:      4;
+  grid-column-start: 1;
+  grid-column-end:   7;
+  z-index: 1;
 }
